Corrected the mode of the RSA key pair to 0600

--- a/ansible/playbooks/provision-control-node.yml
+++ b/ansible/playbooks/provision-control-node.yml
@@ -161,6 +161,7 @@
         copy:
           src: "{{ item }}"
           dest: /vagrant/
+          mode: 0600
         with_items:
           - /home/vagrant/.ssh/id_rsa
           - /home/vagrant/.ssh/id_rsa.pub
